# iosmic

./: .gitignore  CMakeLists.txt  README.md  build.sh  playback.cc
include/: audio.h  command.h  common.h  decoder_interface.h  emitter.h  ffmpeg_decode.h  ios_socket.h  loopback.h  net.h  resampler.h
src/: audio.cc  buffer_util.h  common.h  connection.cc  connection.h  decoder_interface.h  droidcam-cli.cc  emitter.cc  ffmpeg_decode.cc  ffmpeg_decode.h  ios_socket.cc  loopback.cc  loopback.h  net.cc  plugin.cc  plugin.h  resampler.cc  settings.h  usb.cc
